--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ html, body {
 
   background-color: #D1E6B7;
   color:white;
-  font-size:36px;
   font-family: "biko";
 -webkit-font-smoothing: antialiased;
 -webkit-text-size-adjust: 100%;
@@ -27,17 +26,28 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
+ 
 }
 
-
-.nota p{
-
-  padding: 50px 50px;;
+.nota-p{
+  font-size:25px;
+  padding: 50px 50px;
   animation-name: bounceInDown;
   animation-duration: 1s;
   animation-fill-mode: both;
+  transition: all 300ms ease-in-out;
 }
+
+
+.nota-big{
+  font-size: 50px;
+  padding: 50px 50px;
+
+
+}
+
+
 
 @keyframes bounceInDown {
   from, 60%, 75%, 90%, to {
